# labs_robotica_20182

lab1/: CMakeLists.txt  package.xml
lab1/config/: kobuki.rviz
lab1/launch/: display_kobuki.launch
lab1/src/communication/: publish.py  subscribe.py
lab1/src/sols/: sols_joystick.py  sols_send_velocity.py  sols_send_velocity_w.py
lab2/: CMakeLists.txt  package.xml
lab2/src/: control_circ.py  img_subs.py
lab2/src/sols/: img_pub.py  sols_control_circ.py
lab3/: CMakeLists.txt  package.xml
lab3/src/: show_image.py
lab3/src/examples/: 1_color.py  2_morphological.py  3_matching.py  4_transform.py
lab3/src/sols/: color.py
lab4/: CMakeLists.txt  package.xml
lab4/config/: showcam.rviz
lab4/launch/: apriltags.launch
lab4/launch/sols/: display.launch
lab4/src/sols/: rotate.py
lab5/: CMakeLists.txt  package.xml
lab5/config/: showscan.rviz
lab5/examples/: map_room.pgm  map_room.yaml  mapa1.pgm  mapa1.yaml  mapa2.pgm  mapa2.yaml  mapa_311.pgm  mapa_311.yaml
lab5/launch/: amcl_demo.launch  depth_to_scan.launch  robot_mapping.launch  show_map.launch  show_scan.launch  start_amcl.launch  view_navigation.launch
lab5/launch/include/: kobuki_model_bringup.launch  move_base.launch  safety_controller.launch  velocity_smoother.launch
lab5/src/tests/: sols_send_velocity.py
lab5/src/tests/unused/: broadcast_kinect  broadcast_kinect_static  broadcast_map
lab5/src/utils/: dummy_subscriber
lab6/: CMakeLists.txt  package.xml
lab6/launch/: kobuki_kinect_bringup.launch  kobuki_model_bringup.launch  publish_camera_pose.launch
