<?xml version="1.0"?>
<package format="2">
  <name>lab2</name>
  <version>0.0.1</version>
  <description>Laboratorio 2 - Robotica Autonoma en UTEC</description>
  <maintainer email="oramos@utec.edu.pe">Oscar Ramos</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
